--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: projectsveltos/claudie-sveltos-controller:main
+      - image: projectsveltos/claudie-sveltos-controller:v0.37.0
         name: controller
