--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,7 +4,7 @@
 resources:
 #+kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_clusterprofiles.yaml
